# baseSPA

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  generate_secret_key.py  pyproject.toml  tailwind.config.js  todo.md
core/: context_processors.py  settings.py  urls.py  views.py
core/management/commands/: watch_emails.py
listings/: api_views.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_initial.py
listings/templates/listings/: create.html  delete_confirm.html  edit.html  index.html
mobileapp/: .gitignore  README.md  pubspec.yaml
mobileapp/lib/: main.dart
mobileapp/lib/core/: constants.dart
mobileapp/lib/models/: listing.dart  user.dart
mobileapp/lib/screens/: listing_form_screen.dart  login_screen.dart  marketplace_screen.dart  profile_screen.dart  signup_screen.dart
mobileapp/lib/services/: api_client.dart  api_service.dart  auth_service.dart  listing_service.dart  token_storage.dart
mobileapp/lib/widgets/: app_navbar.dart  widgets_info.dart
mobileapp/windows/runner/: main.cpp
static/css/: input.css  output.css
templates/: base.html
templates/account/: login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html
templates/core/: landing.html
templates/snippets/: footer.html  messages.html  navbar.html
users/: adapters.py  api_views.py  managers.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
(+12 files in other folders)
