[project]
name = "basespa"
version = "0.1.0"
description = "A Django-based Single Page Application (SPA) foundation with Django Web UI and Flutter mobile app."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Oliver Mohr Bonometti" }
]
keywords = [
    "django",
    "flutter",
    "spa",
    "framework",
    "oauth",
    "jwt",
    "rest-framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography>=46.0.5",
    "dj-rest-auth>=7.1.1",
    "django>=6.0",
    "django-allauth>=65.14.3",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 100
